# generic-swarm-ops

./: .gitignore  AGENTS.md  EXECUTABLE_PRODUCT.md  MIGRATION_COMPLETE.md  README.md  adoption.md  adoption_hk.md  adoption_hk.script.txt  adoption_plan.md  adoption_plan_hk.md  adoption_plan_hk.script.txt  backend.md  backend_hk.md  book_creator.md  build_frontend.ps1  create_sub_func_spec_plan.md  create_user_guide.md  create_youtube_script.txt  frontend.md  frontend_hk.md  generate_special_skills.md  grok_installation_status.md  grok_investigate_now.md  grok_investigation_report.md  help_spec.md  improvement_prompt.txt  improvements.md  mark_100_verification.md  migrate_to_grok_build.md  migration.md  migration_plan.md  package.json  plan_to_mark_100.md  project_construction_action_list.md  repo_compare.md  repo_compare_hk.md  repo_compare_hk.script.txt  review_adoption.md  run_all_improvement.md  run_grok.bat  (+11 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py  runtime.py
backend/app/api/: dependencies.py  errors.py
backend/app/core/: __init__.py  auth.py  config.py  errors.py  idempotency.py  logging.py  metrics.py  pagination.py  permissions.py  rate_limit.py  security.py
backend/app/schemas/: approvals.py  auth.py  common.py  knowledge.py  memory.py  workflows.py
backend/app/services/: agent_service.py  approval_service.py  audit_service.py  (+12 more)
backend/docs/: postgres-runbook.md
backend/generic_swarm_ops_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: create_admin.py  migrate.py  scaffold_backend.py  seed.py
(+2023 files in other folders)
